@@ -398,6 +398,7 @@
  * 20120211.6 (2.4.3-dev)  Add ap_proxy_checkproxyblock2.
  * 20120211.7 (2.4.3-dev)  Add ap_get_loadavg()
  * 20120211.8 (2.4.3-dev)  Add sticky_separator to proxy_balancer_shared struct.
+ * 20120211.9 (2.4.3-dev)  Add fgrab() to ap_slotmem_provider_t.
  */
 
 #define MODULE_MAGIC_COOKIE 0x41503234UL /* "AP24" */
@@ -405,7 +406,7 @@
 #ifndef MODULE_MAGIC_NUMBER_MAJOR
 #define MODULE_MAGIC_NUMBER_MAJOR 20120211
 #endif
-#define MODULE_MAGIC_NUMBER_MINOR 8                   /* 0...n */
+#define MODULE_MAGIC_NUMBER_MINOR 9                   /* 0...n */
 
 /**
  * Determine if the server's current MODULE_MAGIC_NUMBER is at least a
