@@ -2,6 +2,10 @@
 
 Changes with Apache 2.4.4
 
+  *) mod_slotmem_*: Add in new fgrab() function which forces a grab and
+     slot allocation on a specified slot. Allow for clearing of inuse
+     array. [Jim Jagielski]
+
   *) mod_proxy_ftp: Fix segfaults on IPv4 requests to hosts with DNS
      AAAA records. PR  40841. [Andrew Rucker Jones <arjones simultan
      dyndns org>, <ast domdv de>, Jim Jagielski]
